--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
   <!-- plugins -->
   
-  <link rel="stylesheet" href="https://kk1427.github.io/plugins/bootstrap/bootstrap.min.css ">
+  <link rel="stylesheet" type="text/css" href="https://kk1427.github.io/plugins/bootstrap/bootstrap.min.css ">
   
-  <link rel="stylesheet" href="https://kk1427.github.io/plugins/slick/slick.css ">
+  <link rel="stylesheet" type="text/css" href="https://kk1427.github.io/plugins/slick/slick.css ">
   
-  <link rel="stylesheet" href="https://kk1427.github.io/plugins/themify-icons/themify-icons.css ">
+  <link rel="stylesheet" type="text/css" href="https://kk1427.github.io/plugins/themify-icons/themify-icons.css ">
   
-  <link rel="stylesheet" href="https://kk1427.github.io/plugins/venobox/venobox.css ">
+  <link rel="stylesheet" type="text/css" href="https://kk1427.github.io/plugins/venobox/venobox.css ">
   
 
   <!-- Main Stylesheet -->
