--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- Main Stylesheet -->
   
-  <link rel="stylesheet" href="https://kk1427.github.io/scss/style.min.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="https://kk1427.github.io/scss/style.min.css" media="screen">
 
   <!--Favicon-->
   <link rel="shortcut icon" href="https://kk1427.github.io/images/favicon.png " type="image/x-icon">
