--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
       <div class="collapse navbar-collapse text-center" id="navigation">
         <div class="desktop-view">
           <ul class="navbar-nav mr-auto">
+		  
+            <li class="nav-item">
+              <a class="nav-link" href="http://kk1427.myds.me/Works/BB/"><i class="ti-噗噗主人の家"></i></a>
+            </li>
             
             <li class="nav-item">
               <a class="nav-link" href="https://www.facebook.com/kk1427/"><i class="ti-facebook"></i></a>
